--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="50"/>
             <ImageButton
+                android:id="@+id/prevSong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/leftarrow"
@@ -147,6 +148,7 @@
                 android:layout_width="70dp"
                 android:layout_height="0dp"/>
             <ImageButton
+                android:id="@+id/nextSong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rightarrow"
