Закоммитить : поправлен баг с переключением аудио на следующее когда песня заканчивается самостоятельно, добавлена кнопка назад,  добавлена кнопка поделится и шафл ( пока без отмены его),  поправлен экран авторизации ( не до конца)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="red">#f2483e</color>
     <color name="Orange">#ff7847</color>
-    <color name="white">#fffcfb</color>
+    <color name="white">#FFFCFB</color>
 </resources>
