--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
     android:orientation="vertical"
     android:gravity="center"
     >
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,10 +38,10 @@
 
     </LinearLayout>
 
-<ImageView
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:src="@drawable/photo"/>
+    <ImageView
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:src="@drawable/photo" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,22 +56,20 @@
         android:text="AC/DC"/>
 
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="370dp"
+
         android:background="@drawable/backgroundplayer"
-        android:layout_marginTop="25dp">
+        android:orientation="vertical">
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:background="@drawable/playlist"
             android:layout_gravity="bottom|right"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/playlist"
             android:onClick="btnListAudio"
             />
 
@@ -76,177 +77,186 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
 
             <ImageView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:src="@drawable/speeakeroff"
+                android:layout_marginLeft="30dp"
                 android:layout_marginRight="0dp"
-                android:layout_marginLeft="30dp"/>
+                android:src="@drawable/speeakeroff" />
 
             <SeekBar
                 android:id="@+id/volumeBar"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:progress="50"
-                android:max="100"
                 android:layout_marginLeft="0dp"
-                android:layout_marginRight="0dp"/>
+                android:layout_marginRight="0dp"
+                android:max="100"
+                android:progress="50" />
+
             <ImageView
                 android:layout_width="21dp"
                 android:layout_height="21dp"
-                android:src="@drawable/speeakeron"
-                android:layout_marginRight="30dp"/>
-
-
-
-
-
-
-
-
-
-
-
+                android:layout_marginRight="30dp"
+                android:src="@drawable/speeakeron" />
 
 
         </LinearLayout>
 
         <View
             android:layout_width="0dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="100">
+
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="50"/>
+                android:layout_weight="50" />
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/leftarrow"
                 android:gravity="center"
-                android:layout_gravity="center_vertical"/>
+                android:onClick="playPrevBtnOnClick"
+                tools:ignore="OnClick" />
+
             <View
                 android:layout_width="70dp"
-                android:layout_height="0dp"/>
+                android:layout_height="0dp" />
+
             <ImageButton
                 android:id="@+id/playBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/playbutton"
                 android:gravity="center"
-                android:onClick="playBtnOnClick"/>
+                android:onClick="playBtnOnClick"
+                android:elevation="4dp"
+                />
+
             <View
                 android:layout_width="70dp"
-                android:layout_height="0dp"/>
+                android:layout_height="0dp" />
+
             <ImageButton
+                android:id="@+id/prevBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/rightarrow"
                 android:gravity="center"
-                android:layout_gravity="center_vertical"/>
+                android:onClick="playNextBtnOnClick"
+                tools:ignore="OnClick" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="50"/>
+                android:layout_weight="50" />
         </LinearLayout>
+
         <View
             android:layout_width="0dp"
-            android:layout_height="20dp"/>
-
+            android:layout_height="20dp" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/elapsedTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0:11"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="50dp"
+                android:text="0:00"
                 android:textColor="@color/white"
-                android:textSize="12sp"/>
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/remainingTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-1:11"
                 android:layout_marginLeft="270dp"
+                android:text="0:00"
                 android:textColor="@color/white"
-                android:textSize="12sp"/>
+                android:textSize="10sp" />
 
 
         </LinearLayout>
 
         <SeekBar
             android:id="@+id/positionBar"
-            android:layout_width="350dp"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"/>
+            android:layout_marginRight="30dp" />
 
         <View
             android:layout_width="0dp"
-            android:layout_height="75dp"/>
-
-
+            android:layout_height="75dp" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-        <View
-            android:layout_width="30dp"
-            android:layout_height="0dp"/>
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="0dp" />
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/share"
-                />
-        <View
-            android:layout_width="85dp"
-            android:layout_height="0dp"/>
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/repeat2"/>
+                android:onClick="shareBtnOnClick"/>
+
             <View
                 android:layout_width="85dp"
-                android:layout_height="0dp"/>
+                android:layout_height="0dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shuffle"/>
+                android:background="@drawable/repeat2"
+                android:onClick="repeatBtnOnClick"/>
+
             <View
                 android:layout_width="85dp"
-                android:layout_height="0dp"/>
+                android:layout_height="0dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/more"
-                android:layout_marginTop="10dp"/>
+                android:background="@drawable/shuffle"
+                android:onClick="shufleBtnOnClick"/>
+
+            <View
+                android:layout_width="85dp"
+                android:layout_height="0dp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/more" />
 
             <View
                 android:layout_width="30dp"
-                android:layout_height="0dp"/>
+                android:layout_height="0dp" />
 
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
