--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity"
-    android:orientation="vertical"
     android:gravity="center"
     >
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"/>
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="100">
@@ -19,33 +17,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/equalizer"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="100" />
-
         <ImageButton
             android:id="@+id/burgerButton"
+            android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/burgermenu"
             android:onClick="goToMenu" />
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <ImageView
+        android:id="@+id/albumImageView"
         android:layout_width="190dp"
         android:layout_height="190dp"
         android:src="@drawable/photo" />
-
     <TextView
+        android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/albumImageView"
         android:text="Hightwey to Hell"
         android:textSize="19sp"
         android:textStyle="bold"/>
@@ -55,11 +51,13 @@
         android:textSize="19sp"
         android:text="AC/DC"/>
 
+    <!-- TODO 22.02 #2 -->
 
     <LinearLayout
+        android:id="@+id/playerPanelLayout"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="370dp"
-
         android:background="@drawable/backgroundplayer"
         android:orientation="vertical">
 
@@ -260,4 +258,29 @@
         </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+
+    <LinearLayout
+        android:background="@drawable/bg_weight_loss_button"
+        android:layout_above="@id/playerPanelLayout"
+        android:layout_centerHorizontal="true"
+        android:translationY="50dp"
+        android:layout_width="100dp"
+        android:orientation="vertical"
+        android:layout_height="100dp">
+
+        <TextView
+            android:text="Weight\nLoss Mode"
+            android:textAllCaps="true"
+            android:gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="50dp" />
+
+        <TextView
+            android:text="Off"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textAllCaps="true"
+            android:layout_width="100dp"
+            android:layout_height="50dp" />
+    </LinearLayout>
+</RelativeLayout>
