--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrationActivity"
+    tools:context="ui.RegistrationActivity"
     android:background="@drawable/backgroundregistr">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
