--- a/app/src/main/res/layout/layout_song.xml
+++ b/app/src/main/res/layout/layout_song.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroundregistr">
 
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/titleSongTextViewInList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:textColor="@color/white"
+        android:text="Song"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:id="@+id/titleArtistTextViewInList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Artist" />
+
+
+
 </LinearLayout>
