--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,14 @@
         android:weightSum="100">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/equalizer"
+            android:id="@+id/addSongsButton"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_action_name"
+            android:onClick="addSongs" />
 
         <ImageButton
             android:id="@+id/burgerButton"
@@ -32,29 +34,33 @@
             android:onClick="goToMenu" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        >
+        android:layout_marginTop="30dp"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/albumImageView"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:src="@drawable/photoalbum"
-        android:layout_gravity="center"
+        <ImageView
+            android:id="@+id/albumImageView"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            android:src="@drawable/photoalbum"
 
-        />
-    <TextView
-        android:id="@+id/titleSongTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_below="@id/albumImageView"
-        android:text="Song"
-        android:textSize="19sp"
-        android:textStyle="bold"/>
+            />
+
+        <TextView
+            android:id="@+id/titleSongTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/albumImageView"
+            android:layout_gravity="center"
+            android:text="Song"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            android:layout_centerInParent="true"
+
+            />
 
         <TextView
             android:id="@+id/titleArtistTextView"
@@ -63,7 +69,7 @@
             android:layout_gravity="center"
             android:text="Artist"
             android:textSize="19sp" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <!-- TODO 22.02 #2 -->
 
@@ -76,14 +82,14 @@
         android:orientation="vertical">
 
         <ImageButton
+            android:id="@+id/listSongsBtn"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="bottom|right"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/playlist"
-            android:onClick="btnListAudio"
-            />
+            android:onClick="listSongs" />
 
 
         <LinearLayout
@@ -155,6 +161,7 @@
                 android:gravity="center"
                 android:onClick="playBtnOnClick"
                 android:elevation="4dp"
+
                 />
 
             <View
