--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -7,5 +7,6 @@
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@drawable/backgroundregistr"/>
 </LinearLayout>
