--- a/app/src/main/res/layout/layout_song.xml
+++ b/app/src/main/res/layout/layout_song.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:background="@color/Orange">
 
     <TextView
         android:layout_marginLeft="30dp"
@@ -10,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:text="Song"
         android:textStyle="bold"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        tools:text="Yesterdayyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy"
+        />
 
 
 
