--- a/app/src/main/res/drawable/bg_weight_loss_button.xml
+++ b/app/src/main/res/drawable/bg_weight_loss_button.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item >
-        <shape android:shape="oval">
-           <size android:height="20dp" android:width="0dp"/>
-            <solid android:color="@color/white"/>
+    <item android:bottom="58dp" >
+        <shape android:shape="rectangle">
+            <size android:width="100dp" android:height="50dp" />
+            <corners android:topLeftRadius="58dp" android:topRightRadius="58dp" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 
     <item android:left="8dp" android:top="8dp" android:bottom="8dp" android:right="8dp">
         <shape android:shape="oval">
+            <size android:width="100dp" android:height="100dp" />
             <stroke android:color="@color/white" android:width="4dp" />
-
         </shape>
     </item>
     <item >
         <shape android:shape="oval">
+            <size android:width="100dp" android:height="100dp" />
             <stroke android:color="@color/white" android:width="4dp" />
-
         </shape>
     </item>
 
     <item android:left="4dp" android:top="4dp" android:bottom="4dp" android:right="4dp">
         <shape android:shape="oval">
+            <size android:width="100dp" android:height="100dp" />
             <stroke android:color="@color/Orange" android:width="5dp" />
         </shape>
     </item>
