--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tool="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -76,15 +75,16 @@
     <FrameLayout
         android:id="@+id/songsLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="100dp"
+        android:background="@drawable/backgroundplayerlist"
         android:layout_alignTop="@id/playerPanelLayout">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_recycler_view"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/backgroundplayerlist"/>
+            android:layout_height="wrap_content" />
 
     </FrameLayout>
 
@@ -112,7 +112,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/test_dimen"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -120,7 +120,7 @@
             <ImageView
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="@dimen/super_left_padding"
                 android:layout_marginRight="0dp"
                 android:src="@drawable/speeakeroff" />
 
