--- a/app/src/main/res/layout/layout_song.xml
+++ b/app/src/main/res/layout/layout_song.xml
@@ -32,4 +32,10 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@drawable/line"/>
+
+    <ImageView
+        android:id="@+id/playImageView"
+        android:src="@drawable/playbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
