--- a/app/src/main/res/layout/activity_login_password.xml
+++ b/app/src/main/res/layout/activity_login_password.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgroundregistr">
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="190dp"/>
+
 
 
     <EditText
+        android:layout_marginTop="150dp"
         android:id="@+id/loginEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,12 +32,13 @@
     
 
     <Button
+        android:layout_marginTop="30dp"
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/button"
         android:text="Log in to your account"
         android:textAllCaps="false"
         android:textColor="#F5E9E9"
@@ -46,16 +46,16 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="170dp"/>
 
 
     <Button
-        android:id="@+id/registrButton"
+        android:id="@+id/registrBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
-        android:background="#20F3EDED"
+        android:background="@drawable/button"
         android:onClick="goToRegistr"
         android:text="Registration"
         android:textAllCaps="false"
