--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ProfileActivity"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.ProfileActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,24 +13,22 @@
 
         <ImageView
             android:id="@+id/addSongsButton"
-            android:padding="8dp"
-            android:background="?selectableItemBackgroundBorderless"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_alignParentStart="true"
-            android:src="@drawable/ic_action_name"
-             />
+            android:background="?selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            android:src="@drawable/ic_action_name" />
 
         <ImageView
             android:id="@+id/burgerButton"
-            android:padding="8dp"
-            android:background="?selectableItemBackgroundBorderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/burgermenu"
+            android:background="?selectableItemBackgroundBorderless"
             android:onClick="goToMenu"
-             />
+            android:padding="8dp"
+            android:src="@drawable/burgermenu" />
     </RelativeLayout>
 
 
@@ -42,15 +40,19 @@
         android:background="@drawable/backgpanelpleer"
         android:orientation="vertical">
 
-    <ImageView
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/photo_profile"/>
+        <ImageView
+            android:id="@+id/photoImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/photo_profile" />
 
-
-
+        <com.google.android.material.navigation.NavigationView
+            android:layout_below="@id/photoImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:menu="@menu/user_navigation_menu" />
 
     </RelativeLayout>
 </RelativeLayout>
