--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="red">#f2483e</color>
     <color name="Orange">#ff7847</color>
     <color name="white">#FFFCFB</color>
+    <color name="coral">#fa6243</color>
+
+
 
 </resources>
