--- a/app/src/main/res/drawable/bacgrounduglyest.xml
+++ b/app/src/main/res/drawable/bacgrounduglyest.xml
@@ -4,12 +4,12 @@
     <item  >
         <shape android:shape="rectangle">
 
-            <corners android:topLeftRadius="12dp" android:topRightRadius="12dp" />
+
             <solid android:color="@color/white" />
             <gradient android:type="linear"
                 android:startColor="@color/red"
+                android:centerColor="@color/red"
                 android:endColor="@color/Orange"
-                android:angle="90"
                 />
         </shape>
     </item>
