--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,51 +4,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.ProfileActivity">
+    tools:context=".ui.ProfileActivity"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:weightSum="100">
 
-        <ImageView
-            android:id="@+id/addSongsButton"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_alignParentStart="true"
-            android:background="?selectableItemBackgroundBorderless"
-            android:padding="8dp"
-            android:src="@drawable/ic_action_name" />
 
-        <ImageView
+
+        <ImageButton
+
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="15dp"
             android:id="@+id/burgerButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:background="?selectableItemBackgroundBorderless"
+            android:background="@drawable/ic_burger_menu_background"
             android:onClick="goToMenu"
             android:padding="8dp"
-            android:src="@drawable/burgermenu" />
+            android:src="@drawable/burgermenuwhite" />
     </RelativeLayout>
 
 
     <RelativeLayout
-        android:id="@+id/playerPanelLayout"
+        android:id="@+id/profilPanelLayout"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="595dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/backgpanelpleer"
+        android:background="@drawable/backgroundprofile"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/photoImageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/photo_profile" />
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/photo_profile"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/white"/>
 
         <com.google.android.material.navigation.NavigationView
+
+            app:itemIconTint ="@color/white"
+            app:itemTextColor ="@color/white"
+            app:itemBackground="@drawable/line_items"
+            android:id="@+id/navigation_header_container"
+            android:background="@drawable/bacgrounduglyest"
             android:layout_below="@id/photoImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
