--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ui.RegistrationActivity"
-    android:background="@drawable/backgroundregistr">
+    android:background="@drawable/backgroundprofile"
+    android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
 
         <ImageView
+            android:layout_marginTop="-5dp"
             android:id="@+id/picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,21 +19,65 @@
 
             />
 
-    </FrameLayout>
+
 
     <FrameLayout
+        android:layout_marginTop="15dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-    <Button
-
-        android:layout_gravity="center"
-        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        />
+        android:layout_gravity="center">
+
+        <Button
+            android:onClick="signUpWithFacebook"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button"
+            android:text="Sign Up with Facebook"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
 
 
 </FrameLayout>
 
-</RelativeLayout>
+
+    <FrameLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <Button
+            android:onClick="signUpWithTwitter"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button"
+            android:text="Sign Up with Twitter"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
+
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <Button
+            android:onClick="signUpWithEmail"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button"
+            android:text="Sign Up with email"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
+
+    </FrameLayout>
+
+</LinearLayout>
